<resources>
    <string name="app_name">Organizer</string>
    <string name="login_username">Username</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_email_hint">Email</string>
    <string name="register_phone_hint">Phone</string>
    <string name="register_button">Register</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="Click_here_to_login">Click here to login</string>
    <string name="textview">Hello Jay</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_register_button">Register</string>
    <string name="register_login">Login</string>
    <string name="professional">Professional</string>
    <string name="home">Home</string>
    <string name="student">Student</string>
    <string name="Grocery">Grocery</string>
    <string name="Home_appliances">Home Appliances</string>
    <string name="Medicines">Medicines</string>
    <string name="Home_maintenance">Bills</string>
    <string name="grocery_groceryTextview">Grocery</string>
    <string name="grocery_item_hint">Item</string>
    <string name="grocery_value_hint">Quantity</string>
    <string name="grocery_add_hint">Add</string>
    <string name="grocery_add">Add</string>
    <string name="todo">TO-DO List</string>
    <string name="task">Task</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="update_your_task">Update Your task</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="organizer">Organizer</string>
    <string name="decluttering_life">Decluttering Life</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="profession">Profession</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="meetings">Meetings</string>
    <string name="add_a_new_item">Add a new item</string>
    <string name="item">item</string>
    <string name="quantity">Quantity</string>
    <string name="update_your_item">Update your item</string>
    <string name="office_accessories">Office Accessories</string>
    <string name="bills">Bills</string>
    <string name="start_organizing">Start organizing!!!!</string>
    <string name="dashboard">Dashboard</string>
    <string name="to_do_list">To-Do List</string>
    <string name="TODO">TODO</string>
    <string name="educational">Educational</string>
    <string name="books">Books</string>
    <string name="sports_accessories">Sports Accessories</string>
    <string name="stationary">Stationary</string>
    <string name="office_accessiories">Office Accessiories</string>
    <string name="amount">Amount</string>
    <string name="share">Share</string>
    <string name="Item">Item</string>


</resources>